Add returning keep device functionality